k8s/part2/1_nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.15-alpine
        resources:
          limits:
            cpu: "500m"
            memory: "512M"
          requests:
            cpu: "250m"
            memory: "256M"
        ports:
        - containerPort: 80
