k8s/part2/2_application.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: generator-backend
  namespace: [TODO]
  labels:
    app: generator-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: generator-backend
  template:
    metadata:
      labels:
        app: generator-backend
    spec:
      containers:
        - name: generator-backend
          image: coderpews/name-generator:1.3
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "250m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          readinessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 3
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 3

---

kind: Service
apiVersion: v1
metadata:
  name: generator-backend-service
  namespace: [TODO]
  labels:
    app: generator-backend
spec:
  type: NodePort
  selector:
    app: generator-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: generator-frontend
  namespace: [TODO]
  labels:
    app: generator-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: generator-frontend
  template:
    metadata:
      labels:
        app: generator-frontend
    spec:
      containers:
        - name: generator-frontend
          image: coderpews/name-generator-front:1.6
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "125m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 3
---
kind: Service
apiVersion: v1
metadata:
  namespace: [TODO]
  name: generator-frontend-service
spec:
  type: NodePort
  selector:
    app: generator-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

  apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    namespace: [TODO]
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
      kubernetes.io/ingress.class: nginx
      external-dns.alpha.kubernetes.io/target: [TODO_DNS_ELB]
    name: version-ingress
  spec:
    rules:
      - host: [TODO].aws5.tv2.no
        http:
          paths:
            - path: /api
              backend:
                serviceName: generator-backend-service
                servicePort: 80
            - path: /
              backend:
                serviceName: generator-frontend-service
                servicePort: 80
